<resources>
    <string name="app_name">NeoCafeWaiterApplication</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Вход</string>
    <string name="number_phone">Номер тел.</string>
    <string name="next">Далее</string>
    <string name="input_code">Введите код</string>
    <string name="confirm">Подтердить</string>
    <string name="wrong_code">Неверный код*</string>
    <string name="personal_info">Личные данные</string>
    <string name="name">Имя</string>
    <string name="ur_name">Ваше имя</string>
    <string name="Surname">Фамилия</string>
    <string name="ur_surname">Ваша фамилия</string>
    <string name="birthday">Дата рождения</string>
    <string name="_12_12_2012">12/12/2012</string>
    <string name="kg_number_code">+996</string>
    <string name="yes">Да</string>
    <string name="cancel">Отмена</string>
    <string name="menu">Меню</string>
    <string name="coffee">Кофе</string>
    <string name="tea">Чай</string>
    <string name="drinks">Напитки</string>
    <string name="bakery">Выпечка</string>
    <string name="dessert">Десерты</string>
    <string name="notification">Уведомление</string>
    <string name="clear_all">Очистить все</string>
    <string name="chairs">Столы</string>
    <string name="orders">Заказы</string>
    <string name="free">Свободно</string>
    <string name="closed">Занято</string>
    <string name="all">Все</string>
    <string name="New">Новый</string>
    <string name="in_process">В процессе</string>
    <string name="ready">Готово</string>
    <string name="canceled">Отменено</string>
    <string name="finished">Завершено</string>
    <string name="new_order">Новый заказ</string>
    <string name="result">Итого</string>
    <string name="work_time">График работы</string>
    <string name="take_order">Оформить заказ</string>
    <string name="day_time">Дневная смена с 09:00 до 16:00</string>
    <string name="night_work_time">Вечерняя смена с 16:00 до 22:00</string>
    <string name="day_off">Выходной</string>
    <string name="if_message_null">Если код не пришел, нажмите кнопку отправить повторно</string>
    <string name="send_again">Отправить повторно</string>
    <string name="exit">Выйти</string>
    <string name="alerta_message">Введите код который который дал администратор</string>
    <string name="notification_empty">Пока что уведомлений нет</string>
    <string name="empty">Пусто</string>
</resources>