<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.bottom_navigation.order.receipt.ReceiptFragment">

    <HorizontalScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:selectionRequired="true"
            app:singleLine="true"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/all"
                style="@style/Chip_Custom_Receipt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all"
                app:chipBackgroundColor="@color/all_chip_background" />

            <com.google.android.material.chip.Chip
                android:id="@+id/new_order"
                style="@style/Chip_Custom_Receipt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/New"
                app:chipBackgroundColor="@color/new_chip_background" />

            <com.google.android.material.chip.Chip
                android:id="@+id/in_process"
                style="@style/Chip_Custom_Receipt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/in_process"
                android:textColor="@color/chip_text_color"
                app:checkedIconTint="#343545"
                app:chipBackgroundColor="@color/in_process_chip_background" />

            <com.google.android.material.chip.Chip
                android:id="@+id/ready"
                style="@style/Chip_Custom_Receipt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ready"
                app:chipBackgroundColor="@color/ready_chip_background" />

            <com.google.android.material.chip.Chip
                android:id="@+id/canceled"
                style="@style/Chip_Custom_Receipt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/canceled"
                app:chipBackgroundColor="@color/canceled_chip_background" />


        </com.google.android.material.chip.ChipGroup>

    </HorizontalScrollView>

    <com.bhargavms.dotloader.DotLoader
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/margin_50_dp"
        app:color_array="@array/dot_colors"
        app:dot_radius="@dimen/margin_5_dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:number_of_dots="3" />

    <TextView
        android:id="@+id/empty"
        android:visibility="gone"
        style="@style/TextView_Roboto_14sp"
        android:text="@string/empty"
        android:textColor="#C1BFCB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_10_dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scroll_view" />


</androidx.constraintlayout.widget.ConstraintLayout>