<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.user.UserFragment">

    <Toolbar
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_50_dp"
        android:background="@color/main_background_color">

        <ImageView
            android:id="@+id/back_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:clickable="true"
            android:src="@drawable/ic_back" />

        <TextView
            style="@style/TextView_Roboto_18sp"
            android:layout_gravity="center"
            tools:text="Профиль" />

        <ImageView
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="@dimen/margin_10_dp"
            android:clickable="false"
            android:src="@drawable/ic_pencil" />


    </Toolbar>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_background_color"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout style="@style/Constraint_Layout_Default">

            <ImageView
                android:id="@+id/emoji"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:src="@drawable/waiter_emoji"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.bhargavms.dotloader.DotLoader
                android:id="@+id/progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:dot_radius="5dp"
                app:number_of_dots="3"
                app:color_array="@array/dot_colors"
                app:layout_constraintBottom_toTopOf="@+id/cardView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.cardview.widget.CardView
                android:id="@+id/rating_card"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_60_dp"
                android:layout_marginTop="95dp"
                android:backgroundTint="#7A68B7"
                app:cardCornerRadius="10dp"
                app:cardElevation="@null"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/rating"
                    style="@style/TextView_Roboto_Bold_18sp"
                    android:layout_margin="@dimen/margin_5_dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.cardview.widget.CardView>


            <TextView
                android:id="@+id/textView6"
                style="@style/TextView_Roboto_Thin_14sp"
                android:layout_marginStart="@dimen/margin_30_dp"
                android:layout_marginTop="30dp"
                android:text="@string/name"
                app:layout_constraintStart_toStartOf="parent"

                app:layout_constraintTop_toBottomOf="@id/emoji" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                style="@style/CardView_Default"
                android:layout_marginTop="@dimen/margin_5_dp"
                android:backgroundTint="@color/card_view_background"
                app:cardCornerRadius="@dimen/margin_16_dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6">

                <EditText
                    android:id="@+id/name"
                    style="@style/EditText_Default"
                    android:layout_marginStart="@dimen/margin_16_dp"
                    android:inputType="textCapWords"
                    android:textAlignment="textStart"
                    android:textColor="@color/white"
                    android:textCursorDrawable="@drawable/custom_edit_text_cursor" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/textView2"
                style="@style/TextView_Roboto_Thin_14sp"
                android:layout_marginStart="@dimen/margin_30_dp"
                android:layout_marginTop="@dimen/margin_20_dp"
                android:text="@string/Surname"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cardView" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                style="@style/CardView_Default"
                android:layout_marginTop="@dimen/margin_5_dp"
                android:backgroundTint="@color/card_view_background"
                app:cardCornerRadius="@dimen/margin_16_dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2">

                <EditText
                    android:id="@+id/surname"
                    style="@style/EditText_Default"
                    android:layout_marginStart="@dimen/margin_16_dp"
                    android:inputType="textCapWords"
                    android:textAlignment="textStart"
                    android:textColor="@color/white"
                    android:textCursorDrawable="@drawable/custom_edit_text_cursor" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/textView3"
                style="@style/TextView_Roboto_Thin_14sp"
                android:layout_marginStart="@dimen/margin_30_dp"
                android:layout_marginTop="@dimen/margin_20_dp"
                android:text="@string/number_phone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cardView2" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView3"
                style="@style/CardView_Default"
                android:layout_marginTop="@dimen/margin_5_dp"
                android:backgroundTint="@color/card_view_background"
                app:cardCornerRadius="@dimen/margin_16_dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3">

                <TextView
                    android:id="@+id/number"
                    style="@style/TextView_Thin_18sp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/margin_16_dp" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/textView4"
                style="@style/TextView_Roboto_Thin_14sp"
                android:layout_marginStart="@dimen/margin_30_dp"
                android:layout_marginTop="@dimen/margin_20_dp"
                android:text="@string/birthday"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cardView3" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView5"
                style="@style/CardView_Default"
                android:layout_marginTop="@dimen/margin_5_dp"
                android:backgroundTint="@color/card_view_background"
                app:cardCornerRadius="@dimen/margin_16_dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4">

                <TextView
                    android:id="@+id/birthday"
                    style="@style/TextView_Thin_18sp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/margin_16_dp" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/time_work"
                style="@style/TextView_Roboto_20sp"
                android:layout_marginTop="@dimen/margin_25_dp"
                android:text="@string/work_time"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cardView5" />

            <com.bhargavms.dotloader.DotLoader
                android:id="@+id/time_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10_dp"
                android:layout_marginBottom="3dp"
                android:layout_margin="@dimen/margin_20_dp"
                app:dot_radius="5dp"
                app:number_of_dots="3"
                app:color_array="@array/dot_colors"
                app:layout_constraintBottom_toTopOf="@+id/log_out"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/time_work" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_25_dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/log_out"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/time_work" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/log_out"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_50_dp"
                android:layout_marginStart="@dimen/margin_16_dp"
                android:layout_marginTop="@dimen/margin_60_dp"
                android:layout_marginEnd="@dimen/margin_16_dp"
                android:background="@drawable/rounded_alert_dialog"
                android:backgroundTint="@color/main_enable_color"
                android:text="@string/exit"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recycler" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>